--- a/0-Project/docs/IA048-Projeto_Final-Gabriel_Toffanetto/IA048-Projeto_Final-Gabriel_Toffanetto.tex
+++ b/0-Project/docs/IA048-Projeto_Final-Gabriel_Toffanetto/IA048-Projeto_Final-Gabriel_Toffanetto.tex
@@ -335,6 +335,8 @@ mIOU is: 0.7450460195541382
 %	\end{itemize}
 %\end{note}
 
+Deixo meus agradecimentos aos professores Dr. Levy Boccato e Dr. Romis Attux, por todos os conhecimentos compartilhados e que tornaram possível a realização deste trabalho.
+
 \section*{Referências}  \label{sc:referencias}
 
 \nocite{geron2020HandsonMachineLearning}
