--- a/0-Project/docs/IA048-Projeto_Final-Gabriel_Toffanetto/bibliograpy.bib
+++ b/0-Project/docs/IA048-Projeto_Final-Gabriel_Toffanetto/bibliograpy.bib
@@ -190,23 +190,6 @@
   langid = {english}
 }
 
-@article{janai2020ComputerVisionAutonomous,
-  title = {Computer {{Vision}} for {{Autonomous Vehicles}}: {{Problems}}, {{Datasets}} and {{State}} of the {{Art}}},
-  shorttitle = {Computer {{Vision}} for {{Autonomous Vehicles}}},
-  author = {Janai, Joel and G{\"u}ney, Fatma and Behl, Aseem and Geiger, Andreas},
-  year = {2020},
-  journal = {Foundations and Trends{\textregistered} in Computer Graphics and Vision},
-  volume = {12},
-  number = {1--3},
-  pages = {1--308},
-  issn = {1572-2740, 1572-2759},
-  doi = {10.1561/0600000079},
-  urldate = {2024-05-24},
-  langid = {english},
-  keywords = {Survey},
-  file = {/home/toffanetto/Zotero/storage/RN86RXDK/Janai et al. - 2020 - Computer Vision for Autonomous Vehicles Problems,.pdf}
-}
-
 @article{jebamikyousAutonomousVehiclesPerception2022,
   title = {Autonomous Vehicles Perception ({{AVP}}) Using Deep Learning: {{Modeling}}, Assessment, and Challenges},
   shorttitle = {Autonomous Vehicles Perception ({{AVP}}) Using Deep Learning},
@@ -306,6 +289,15 @@
   archiveprefix = {arXiv},
   keywords = {Computer Science - Computer Vision and Pattern Recognition,Computer Science - Machine Learning},
   file = {/home/toffanetto/Zotero/storage/DV3R7NHD/Shrivastava et al. - 2016 - Training Region-based Object Detectors with Online.pdf;/home/toffanetto/Zotero/storage/JV65BQXZ/1604.html}
+}
+
+@article{treml2016SpeedingSemanticSegmentation,
+  title = {Speeding up {{Semantic Segmentation}} for {{Autonomous Driving}}},
+  author = {Treml, Michael and {Arjona-Medina}, Jos{\'e} and Unterthiner, Thomas and Durgesh, Rupesh and Friedmann, Felix and Schuberth, Peter and Mayr, Andreas and Heusel, Martin and Hofmarcher, Markus and Widrich, Michael and Nessler, Bernhard and Hochreiter, Sepp},
+  year = {2016},
+  abstract = {Deep learning has considerably improved semantic image segmentation. However, its high accuracy is traded against larger computational costs which makes it unsuitable for embedded devices in self-driving cars. We propose a novel deep network architecture for image segmentation that keeps the high accuracy while being efficient enough for embedded devices. The architecture consists of ELU activation functions, a SqueezeNet-like encoder, followed by parallel dilated convolutions, and a decoder with SharpMask-like refinement modules. On the Cityscapes dataset, the new network achieves higher segmentation accuracy than other networks that are tailored to embedded devices. Simultaneously the frame-rate is still sufficiently high for the deployment in autonomous vehicles.},
+  langid = {english},
+  file = {/home/toffanetto/Zotero/storage/25VWV4EJ/Treml et al. - Speeding up Semantic Segmentation for Autonomous D.pdf}
 }
 
 @inproceedings{vitor20132D3DVision,
